# trabajo2-ayp-organizador-tareas

./: CMakeLists.txt  main.c
bd/: etiquetas.txt  recordatorios.txt  relaciones.txt  tareas.txt
headers/: base.h  base_datos.h  borrar.h  busqueda.h  efectos.h  estructuras.h  etiqueta.h  inputs.h  recordatorio.h  relaciones.h  sorts.h  tarea.h
src/: base.c  base_datos.c  borrar.c  busqueda.c  efectos.c  estructuras.c  etiqueta.c  inputs.c  recordatorio.c  relaciones.c  sorts.c  tarea.c
